# SED_Tools

./: .gitattributes  .gitignore  API_README.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Kurucz2003all_fid16417.txt  Kurucz2003all_fid16418.txt  Kurucz2003all_fid16419.txt  Kurucz2003all_fid16420.txt  Kurucz2003all_fid16421.txt  Kurucz2003all_fid16432.txt  Kurucz2003all_fid16433.txt  Kurucz2003all_fid16434.txt  Kurucz2003all_fid16435.txt  Kurucz2003all_fid16436.txt  Kurucz2003all_fid16449.txt  Kurucz2003all_fid16450.txt  Kurucz2003all_fid16451.txt  Kurucz2003all_fid16452.txt  Kurucz2003all_fid16453.txt  Kurucz2003all_fid16464.txt  Kurucz2003all_fid16465.txt  Kurucz2003all_fid16466.txt  Kurucz2003all_fid16467.txt  Kurucz2003all_fid16468.txt  Kurucz2003all_fid16480.txt  Kurucz2003all_fid16481.txt  Kurucz2003all_fid16482.txt  Kurucz2003all_fid16483.txt  Kurucz2003all_fid16484.txt  Kurucz2003all_fid16491.txt  Kurucz2003all_fid16492.txt  Kurucz2003all_fid16493.txt  Kurucz2003all_fid16494.txt  Kurucz2003all_fid16495.txt  Kurucz2003all_fid16502.txt  Kurucz2003all_fid16503.txt  Kurucz2003all_fid16504.txt  Kurucz2003all_fid16505.txt  (+841 more)
SED_tools/: __init__.py  cli.py
data/: counter.php  index.html  index.json  wl_cut.php
jupyter_notebooks/: 01_discovery_and_metadata.ipynb  01_filters.ipynb  02_downloading_and_local_data.ipynb  02_synthetic_photometry.ipynb  03_discovery_and_metadata.ipynb  03_interpolation.ipynb  04_combining_grids.ipynb  04_downloading_and_local_data.ipynb  05_interpolation.ipynb  05_ml_completion.ipynb  06_combining_grids.ipynb  06_ml_generator.ipynb  07_catalog_and_spectrum.ipynb  07_ml_completion.ipynb  08_filters.ipynb  08_ml_generator.ipynb  09_catalog_and_spectrum.ipynb  09_synthetic_photometry.ipynb  10_flux_cubes_and_mesa.ipynb  10_grid_densification.ipynb  11_flux_cubes_and_mesa.ipynb  11_grid_densification.ipynb  12_pipeline_audit.ipynb
paper/: paper.bib  paper.md
sed_tools/: __init__.py  _constants.py  _flux.py  _lookup_io.py  _resample.py  api.py  cli.py  collision_config.py  combine_filters.py  combine_stellar_atm.py  config.py  flux_cube_tool.py  grid_coverage.py  grid_densifier.py  header_parser.py  io_utils.py  mast_spectra_grabber.py  mesa_prepare.py  ml.py  ml_optimized.py  ml_sed_completer.py  ml_sed_generator.py  ml_utils.py  models.py  msg_spectra_grabber.py  njm_filter_grabber.py  njm_spectra_grabber.py  parsing.py  precompute_flux_cube.py  sed_tools.defaults  sed_unit_converter.py  spectra_cleaner.py  spectrum_io.py  svo_filter_grabber.py  svo_regen_spectra_lookup.py  svo_spectra_filter.py  svo_spectra_grabber.py  terminal_plots.py  ui_utils.py
stellar_colors/: __init__.py  config.py  plotting.py  version.py
stellar_colors.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: audit_pipeline.py  audit_report.txt  conftest.py  test_atmosphere.py  test_clean_to_cube_integration.py  test_cli.py  test_collision_config.py  test_config.py  test_cube.py  test_cube_binary_io.py  test_filter_api.py  test_filter_bulk_selection.py  test_flux_cube_collisions.py  test_flux_cube_tool.py  test_grabber.py  test_interpolation_known_answers.py  test_io_utils.py  test_lookup_io.py  (+15 more)
(+5811 files in other folders)
