[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sed-tools"
version = "0.1.0"
description = "Programmatic access to SED Tools stellar atmosphere grids and photometry helpers."
readme = "README.md"
authors = [{ name = "SED Tools Maintainers" }]
requires-python = ">=3.9"
keywords = ["astronomy", "spectra", "photometry", "sed"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
    "numpy>=1.22",
    "pandas>=1.5",
    "tqdm>=4.66",
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "lxml>=4.9",
    "h5py>=3.10",
    "astropy>=6.0",
    "astroquery>=0.4.7",
    "matplotlib>=3.7",
]

[project.urls]
"Homepage" = "https://github.com/"

[tool.setuptools.packages.find]
include = ["sed_tools"]

[tool.setuptools]
include-package-data = true
